[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "wordle"
version = "0.2.1"
description = "Create a wordcloud for a Git repository."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/wordle"
"Issue Tracker" = "https://github.com/domdfcoding/wordle/issues"
"Source Code" = "https://github.com/domdfcoding/wordle"
Documentation = "https://wordle.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
